--- a/SetupSetps/3. Google Sheet Python.md
+++ b/SetupSetps/3. Google Sheet Python.md
@@ -43,7 +43,7 @@ class TurnOffPBR(hass.Hass):
         # use creds to create a client to interact with the Google Drive API
         scope = ['https://spreadsheets.google.com/feeds',
                  'https://www.googleapis.com/auth/drive']
-        creds = ServiceAccountCredentials.from_json_keyfile_name('/share/googleDriveCredentials.json', scope) # change to name of your file
+        creds = ServiceAccountCredentials.from_json_keyfile_name('/share/**googleDriveCredentials**.json', scope) # change to name of your file
         client = gspread.authorize(creds)
         fmt = '%Y-%m-%d %H:%M:%S'
         d = datetime.datetime.now()
@@ -52,7 +52,7 @@ class TurnOffPBR(hass.Hass):
         val1 = self.get_state("input_boolean.switch1")
         val2 = "123"
 
-        sheet = client.open("mySheet").sheet1   #change to name of your sheet
+        sheet = client.open("**mySheet**").sheet1   #change to name of your sheet
         
         row = [d_string,val1,val2]
         index = 1
