--- a/Tutorials/5. Home Assistant Entities Setup.md
+++ b/Tutorials/5. Home Assistant Entities Setup.md
@@ -64,3 +64,57 @@ sensor:
         value_template:"{{ states('input_number.Slider1') }}"
 ```
 In the example above as the sensor is called from the input_number you do not need to use this in appdaemon, but weould follow the same process if needed.
+
+To display a sensor in a time format you can add the following to the value template:
+
+```diff
+# NOTE:
+# - define durations for the various UNITs of time
+#   * modulus helps to reduce ""extras"" of the larger time units
+# 
+# - now build the string
+#
+# for each UNIT of time that's greater than 1:
+#     if it's not the first loop iteration:
+#         append "", "" to the string
+#     else:
+#         1. convert the DURATION to STR
+#         2. split DURATION on "".""
+#         3. append the left part (the whole number) to the string
+#         4. append the UNIT to the string
+#
+# ...but if that's no UNITs, then we just started so
+# set the string to ""just now""
+#
+
+sensor:
+  - platform: template
+    sensors:
+      hass_uptime:
+        value_template: >-
+          {%- set uptime  = states.sensor.hass_uptime_minutes.state | round -%}
+          {%- set sep     = ', ' -%}
+          {%- set TIME_MAP = {
+              'week': (uptime / 10080) % 10080,
+               'day': (uptime / 1440) % 7,
+              'hour': (uptime / 60) % 24,
+            'minute': (uptime % 60)
+          }
+          -%}
+
+          {%- for unit, duration in TIME_MAP.items() if duration >= 1 -%}
+            {%- if not loop.first -%}
+              {{ sep }}
+            {%- endif -%}
+              
+            {{ (duration | string).split('.')[0] }} {{ unit }}
+
+            {%- if duration >= 2 -%}
+              s
+            {%- endif -%}
+          {%- endfor -%}
+
+          {%- if uptime < 1 -%}
+            just now
+          {%- endif -%}"
+```
