--- a/Tutorials/5. Home Assistant Entities Setup.md
+++ b/Tutorials/5. Home Assistant Entities Setup.md
@@ -65,7 +65,7 @@ sensor:
 ```
 In the example above as the sensor is called from the input_number you do not need to use this in appdaemon, but weould follow the same process if needed.
 
-#####To display a sensor in a time format you can add the following to the value template:
+###### To display a sensor in a time format you can add the following to the value template:
 
 ```diff
 # NOTE:
