--- a/Tutorials/5. Home Assistant Entities Setup.md
+++ b/Tutorials/5. Home Assistant Entities Setup.md
@@ -90,9 +90,11 @@ In the example above as the sensor is called from the input_number you do not ne
 sensor:
   - platform: template
     sensors:
-      hass_uptime:
+#main Panel
+      TimeInput:
+        friendly_name: "Time"
         value_template: >-
-          {%- set uptime  = states.sensor.hass_uptime_minutes.state | round -%}
+          {%- set uptime  = states.input_number.TimeInput | round -%}
           {%- set sep     = ', ' -%}
           {%- set TIME_MAP = {
               'week': (uptime / 10080) % 10080,
