Update 5. Home Assistant Entities Setup.md

--- a/Tutorials/5. Home Assistant Entities Setup.md
+++ b/Tutorials/5. Home Assistant Entities Setup.md
@@ -117,6 +117,6 @@ sensor:
           {%- endfor -%}
 
           {%- if uptime < 1 -%}
-            just now
-          {%- endif -%}"
+            0
+          {%- endif -%}
 ```
